K8s_DevOps/k8s_code/init-example.yml
kind: Pod
apiVersion: v1
metadata:
  name: init-example1
spec:
  containers:
  - name: alpine
    image: alpine
