K8s_DevOps/k8s_code/init-example2.yml
kind: Pod
apiVersion: v1
metadata: 
  name: init-example2
spec:
  containers:
  - name: web
    image: nginx
