K8s_DevOps/k8s_code/pv_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myd
spec:
  replicas: 2
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      name: "wpod"
      labels:
        env: prod

    spec:
      volumes:
      - name: mypod-pvc
        persistentVolumeClaim:
          claimName: mypvc
      containers:
      - name: "webc2"
        image: "vimal13/apache-webserver-php"
        volumeMounts:
        - mountPath: /var/www/html
          name: mypod-pvc
      nodeSelector:
        mount: nfs
