K8s_DevOps/k8s_code/rc_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-deploy
spec:
  replicas: 3
  selector: 
    matchLabels:
      env: prod
    matchExpressions:
      - { key: team, operator: In, values: [ team1, team2 ] }
      - { key: tier, operator: In, values: frontend }
  template:
    metadata:
      name: "webpod4"
      labels:
        app: backend 
        team: team1
        region: AZ
        env: prod

    spec:
       containers:
       - name: "webc1"
         image: "vimal13/apache-webserver-php"
