K8s_DevOps/k8s_code/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: myingress
spec:
  rules:
  - host: www.lw.com
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service: 
            name: searchd
            port: 
              number: 80
      - path: /mail
        pathType: Prefix
        backend:
          service: 
            name: maild
            port: 
              number: 80
